--- a/index.html
+++ b/index.html
@@ -2,175 +2,248 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>混雑状況確認ページ</title>
+  <title>混雑状況</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-      margin: 20px;
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
       padding: 0;
-      text-align: center;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
+    }
+     
+    header {
+      background-color: #2c3e50;
+      color: white;
     }
 
-    h1 {
-      color: #333;
+    .header-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 20px;
     }
 
-    #loading {
+    .header-title {
       font-size: 1.5em;
-      margin: 30px 0;
-    }
-
-    .table {
-      background-color: white;
-      border-radius: 10px;
-      margin: 15px auto;
-      padding: 10px;
-      width: 300px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .table h2 {
-      margin: 0 0 10px;
-    }
-
-    .status {
       font-weight: bold;
     }
 
-    .table-map {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      margin-top: 40px;
-      justify-items: center;
-    }
-
-    .table-box {
-      width: 120px;
-      height: 80px;
-      background-color: lightgreen;
-      border-radius: 10px;
-      text-align: center;
-      padding: 10px;
-      box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
-      transition: background-color 0.5s ease;
+    .header-links {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      gap: 20px;
     }
 
-    .table-box h3 {
-      margin: 0;
+    .header-links a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .header-links a:hover {
+      text-decoration: underline;
+    }
+
+    nav {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      background-color: #3498db;
+      text-align: center;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #fff;
+    }
+
+    nav a {
+      padding: 12px 0;
+      display: block;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      border-right: 1px solid #fff;
+    }
+
+    nav a:last-child {
+      border-right: none;
+    }
+
+    nav a.active {
+      background-color: #1f618d;
+    }
+
+    nav a:hover {
+      background-color: #2980b9;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 5px;
+    }
+
+    p {
       font-size: 16px;
+      margin: 8px 0;
     }
 
-    .table-box p {
-      margin: 5px 0 0;
-      font-size: 14px;
+    #tables p {
+      font-size: 17px;
     }
+
   </style>
-</head>
-<body>
-  <h1>店内混雑状況</h1>
-  <div id="loading">読み込み中...</div>
-  <section id="tables"></section>
-
-  <section>
-    <h2>テーブルマップ（視覚表示）</h2>
-    <div class="table-map">
-      <div class="table-box" id="table1-box">
-        <h3>テーブル1</h3>
-        <p id="table1-time">---</p>
-      </div>
-      <div class="table-box" id="table2-box">
-        <h3>テーブル2</h3>
-        <p id="table2-time">---</p>
-      </div>
-      <div class="table-box" id="table3-box">
-        <h3>テーブル3</h3>
-        <p id="table3-time">---</p>
-      </div>
-      <div class="table-box" id="table4-box">
-        <h3>テーブル4</h3>
-        <p id="table4-time">---</p>
-      </div>
-      <div class="table-box" id="table5-box">
-        <h3>テーブル5</h3>
-        <p id="table5-time">---</p>
-      </div>
-      <div class="table-box" id="table6-box">
-        <h3>テーブル6</h3>
-        <p id="table6-time">---</p>
-      </div>
-      <div class="table-box" id="table7-box">
-        <h3>テーブル7</h3>
-        <p id="table7-time">---</p>
-      </div>
-    </div>
-  </section>
 
   <script>
-    async function fetchData() {
-      try {
-        const response = await fetch("log.json?_=" + new Date().getTime());
-        if (!response.ok) throw new Error("通信に失敗しました");
-        const jsonData = await response.json();
-        updateTableDisplays(jsonData);
-      } catch (error) {
-        console.error("データ取得エラー:", error);
-        document.getElementById("loading").textContent = "データの読み込みに失敗しました。";
-      }
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const tableCounts = {};
+
+    function formatTimestamp(isoString) {
+      if (!isoString || typeof isoString !== "string") return "ー";
+      const date = new Date(isoString);
+      const options = {
+        timeZone: "Asia/Tokyo",
+        year: "numeric",
+        month: "2-digit",
+        day: "2-digit",
+        hour: "2-digit",
+        minute: "2-digit"
+      };
+      return new Intl.DateTimeFormat("ja-JP", options).format(date).replace(/\//g, "-").replace(",", "");
     }
 
-    function updateTableDisplays(data) {
-      const tablesDiv = document.getElementById("tables");
-      tablesDiv.innerHTML = "";
-      document.getElementById("loading").style.display = "none";
+    function calculateElapsedTime(isoString) {
+      if (!isoString) return "";
+      const start = new Date(isoString);
+      const now = new Date();
+      const diffMs = now - start;
+      if (diffMs < 0) return "";
+      const minutes = Math.floor(diffMs / 60000);
+      const hours = Math.floor(minutes / 60);
+      const remainingMinutes = minutes % 60;
+      return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
+    }
 
-      for (let tableNum = 1; tableNum <= 7; tableNum++) {
-        const tableData = data[`table${tableNum}`] || [];
-        const currentCount = tableData.length;
-        const lastEntryTime = tableData[currentCount - 1]?.entry_time;
-        const lastEntryDate = new Date(lastEntryTime);
-        const now = new Date();
-        const elapsedMs = now - lastEntryDate;
-        const elapsed = formatElapsedTime(elapsedMs);
+    function updateTableDisplays() {
+      Object.keys(tableCounts).forEach(tableNum => {
+        const t = tableCounts[tableNum];
+        const currentCount = t.enter - t.exit;
+        const timeToShow = currentCount > 0 ? t.lastEnterTime : null;
+        const status = currentCount > 0 ? "利用中" : "空席";
+        const timeText = formatTimestamp(timeToShow);
+        const elapsed = currentCount > 0 ? `｜${calculateElapsedTime(timeToShow)}` : "";
+        const element = document.getElementById(`table${tableNum}-status`);
+        if (element) {
+          element.textContent = `${status}（${timeText}${elapsed}）`;
+        }
+      });
+    }
 
-        const tableDiv = document.createElement("div");
-        tableDiv.className = "table";
-        tableDiv.innerHTML = `
-          <h2>テーブル ${tableNum}</h2>
-          <p class="status">人数: ${currentCount}</p>
-          <p>最終入店: ${lastEntryTime ? new Date(lastEntryTime).toLocaleTimeString() : "なし"}</p>
-          <p>経過時間: ${lastEntryTime ? elapsed : "—"}</p>
-        `;
-        tablesDiv.appendChild(tableDiv);
+    function countVisitors(snapshot) {
+      let entries = 0;
+      let exits = 0;
 
-        // ▼ テーブルマップの色と時間表示更新
-        const box = document.getElementById(`table${tableNum}-box`);
-        const timeElem = document.getElementById(`table${tableNum}-time`);
-        if (box && timeElem) {
-          if (currentCount > 0) {
-            box.style.backgroundColor = "tomato";
-            timeElem.textContent = `${lastEntryTime ? new Date(lastEntryTime).toLocaleTimeString() : "—"}｜${elapsed}`;
-          } else {
-            box.style.backgroundColor = "lightgreen";
-            timeElem.textContent = "空席";
+      for (let i = 1; i <= 7; i++) {
+        tableCounts[i.toString()] = {
+          enter: 0,
+          exit: 0,
+          lastEnterTime: null
+        };
+      }
+
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const table = data.table;
+        const timestamp = data.timestamp;
+        if (!table || !timestamp) return;
+
+        if (data.type === "enter") entries++;
+        if (data.type === "exit") exits++;
+
+        if (tableCounts[table]) {
+          if (data.type === "enter") {
+            tableCounts[table].enter++;
+            if (!tableCounts[table].lastEnterTime || new Date(tableCounts[table].lastEnterTime) < new Date(timestamp)) {
+              tableCounts[table].lastEnterTime = timestamp;
+            }
+          }
+          if (data.type === "exit") {
+            tableCounts[table].exit++;
           }
         }
-      }
+      });
+
+      document.getElementById("count").textContent = entries - exits;
+      document.getElementById("entries").textContent = entries;
+      document.getElementById("exits").textContent = exits;
+
+      updateTableDisplays();
     }
 
-    function formatElapsedTime(ms) {
-      const minutes = Math.floor(ms / 60000);
-      const seconds = Math.floor((ms % 60000) / 1000);
-      return `${minutes}分${seconds}秒`;
-    }
-
-    fetchData();
-    setInterval(fetchData, 10000); // 10秒ごとに更新
+    window.onload = () => {
+      db.collection("logs").onSnapshot(countVisitors);
+      setInterval(updateTableDisplays, 60000);
+    };
+    
   </script>
+</head>
+<body>
+
+  <!-- ✅ 本体 -->
+  <header>
+    <div class="header-bar">
+      <div class="header-title">店内管理システム</div>
+      <div class="header-links">
+        <a href="#">マニュアル</a>
+        <a href="#">ログアウト</a>
+      </div>
+    </div>
+    <nav>
+      <a href="index.html" class="active">ホーム</a>
+      <a href="map.html">店内マップ</a>
+      <a href="histogram.html">混雑状況可視化</a>
+      <a href="admin.html">待ち管理</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>全体状況</h2>
+      <p>現在の入店者数: <span id="count">読み込み中...</span></p>
+      <p>累計入店数: <span id="entries">-</span></p>
+      <p>累計退店数: <span id="exits">-</span></p>
+    </section>
+
+    <section id="tables">
+      <h2>テーブル別 使用状況（時刻）</h2>
+      <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
+      <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
+      <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
+      <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
+      <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
+      <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
+      <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
+    </section>
+  </main>
+
 </body>
 </html>
