--- a/map.html
+++ b/map.html
@@ -12,7 +12,7 @@
       font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd); /* 背景を追加 */
+      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
     }
 
     header {
@@ -27,37 +27,15 @@
       padding: 10px 20px;
     }
 
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
     nav {
       display: grid;
       grid-auto-flow: column;
       background-color: #3498db;
       text-align: center;
-      border-top: 1px solid #fff;
-      border-bottom: 1px solid #fff;
     }
 
     nav a {
       padding: 12px 0;
-      display: block;
       color: white;
       text-decoration: none;
       font-weight: bold;
@@ -72,33 +50,33 @@
       background-color: #1f618d;
     }
 
-    nav a:hover {
-      background-color: #2980b9;
-    }
-
-    .map-container {
-      position: relative;
-      width: 100%;
+    .map-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 150px);
+      gap: 30px;
       max-width: 800px;
-      margin: 30px auto;
+      margin: 40px auto;
+      padding: 10px;
     }
 
-    .map-image {
-      width: 100%;
-      display: block;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-
-    .table-marker {
-      position: absolute;
-      font-size: 1.2em;
+    .table {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-weight: bold;
-      color: black;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 4px 8px;
-      border-radius: 5px;
-      border: 1px solid #999;
+      font-size: 1.2em;
+      border-radius: 10px;
+      border: 2px solid #444;
+      transition: background-color 0.3s;
+    }
+
+    .available {
+      background-color: #a8e6a2;
+    }
+
+    .occupied {
+      background-color: #f8a5a5;
     }
   </style>
 
@@ -116,56 +94,51 @@
     const db = firebase.firestore();
 
     const tableStatus = {};
-    const tablePositions = {
-      "1": { top: "30%", left: "20%" },
-      "2": { top: "30%", left: "50%" },
-      "3": { top: "30%", left: "80%" },
-      "4": { top: "60%", left: "20%" },
-      "5": { top: "60%", left: "50%" },
-      "6": { top: "60%", left: "80%" },
-      "7": { top: "60%", left: "50%" }
-    };
+    const totalTables = 7;
 
-    function updateMarkers() {
-      for (const table in tablePositions) {
-        const marker = document.getElementById(`marker-${table}`);
-        if (!marker) continue;
-        const count = tableStatus[table] || 0;
-        marker.textContent = count > 0 ? `✕ 利用中` : `◯ 空席`;
-        marker.style.backgroundColor = count > 0 ? "#fdd" : "#dfd";
+    function updateTableDisplay() {
+      for (let i = 1; i <= totalTables; i++) {
+        const elem = document.getElementById(`table-${i}`);
+        if (!elem) continue;
+
+        const count = tableStatus[i] || 0;
+        if (count > 0) {
+          elem.classList.remove("available");
+          elem.classList.add("occupied");
+          elem.textContent = `✕ ${i}番台`;
+        } else {
+          elem.classList.remove("occupied");
+          elem.classList.add("available");
+          elem.textContent = `◯ ${i}番台`;
+        }
       }
     }
 
     function countVisitors(snapshot) {
-      const tempCounts = {};
-
-      for (const table in tablePositions) {
-        tempCounts[table] = 0;
-      }
-
       const enterLog = {};
       const exitLog = {};
+
+      for (let i = 1; i <= totalTables; i++) {
+        enterLog[i] = 0;
+        exitLog[i] = 0;
+      }
 
       snapshot.forEach(doc => {
         const data = doc.data();
         const table = data.table;
         const type = data.type;
-        const timestamp = data.timestamp;
-        if (!table || !timestamp) return;
 
-        if (!enterLog[table]) enterLog[table] = 0;
-        if (!exitLog[table]) exitLog[table] = 0;
+        if (!table || !type) return;
 
         if (type === "enter") enterLog[table]++;
         if (type === "exit") exitLog[table]++;
       });
 
-      for (const table in tablePositions) {
-        const current = (enterLog[table] || 0) - (exitLog[table] || 0);
-        tableStatus[table] = current;
+      for (let i = 1; i <= totalTables; i++) {
+        tableStatus[i] = (enterLog[i] || 0) - (exitLog[i] || 0);
       }
 
-      updateMarkers();
+      updateTableDisplay();
     }
 
     window.onload = () => {
@@ -187,21 +160,21 @@
       <a href="index.html">ホーム</a>
       <a href="map.html" class="active">店内マップ</a>
       <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>      
+      <a href="admin.html">待ち管理</a>
     </nav>
   </header>
 
-  <main class="map-container">
-    <img src="map.png" alt="店内マップ" class="map-image">
-
-    <!-- テーブルごとのマーカー -->
-    <div id="marker-1" class="table-marker" style="top: 17%; left: 11%;">読み込み中...</div>
-    <div id="marker-2" class="table-marker" style="top: 18%; left: 80%;">読み込み中...</div>
-    <div id="marker-3" class="table-marker" style="top: 45%; left: 11%;">読み込み中...</div>
-    <div id="marker-4" class="table-marker" style="top: 46%; left: 80%;">読み込み中...</div>
-    <div id="marker-5" class="table-marker" style="top: 74%; left: 11%;">読み込み中...</div>
-    <div id="marker-6" class="table-marker" style="top: 74%; left: 46%;">読み込み中...</div>
-    <div id="marker-7" class="table-marker" style="top: 74%; left: 80%;">読み込み中...</div>
+  <main>
+    <div class="map-grid">
+      <div id="table-1" class="table">読み込み中...</div>
+      <div id="table-2" class="table">読み込み中...</div>
+      <div id="table-3" class="table">読み込み中...</div>
+      <div id="table-4" class="table">読み込み中...</div>
+      <div id="table-5" class="table">読み込み中...</div>
+      <div id="table-6" class="table">読み込み中...</div>
+      <div id="table-7" class="table">読み込み中...</div>
+    </div>
   </main>
 </body>
 </html>
+
