--- a/map.html
+++ b/map.html
@@ -2,179 +2,69 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>店内マップ</title>
-
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-
+  <title>テーブルマップ</title>
   <style>
     body {
+      background-color: #f4f0e0;
       font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
     }
 
-    header {
-      background-color: #2c3e50;
-      color: white;
-    }
-
-    .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-    }
-
-    nav {
+    .table-area {
       display: grid;
-      grid-auto-flow: column;
-      background-color: #3498db;
-      text-align: center;
+      grid-template-columns: repeat(4, auto);
+      gap: 40px;
+      padding: 30px;
     }
 
-    nav a {
-      padding: 12px 0;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      border-right: 1px solid #fff;
-    }
-
-    nav a:last-child {
-      border-right: none;
-    }
-
-    nav a.active {
-      background-color: #1f618d;
-    }
-
-    .map-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 150px);
-      gap: 30px;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 10px;
+    .table-container {
+      position: relative;
+      width: 120px;
+      height: 120px;
     }
 
     .table {
+      width: 100px;
+      height: 100px;
+      background-color: green;
+      color: white;
+      font-weight: bold;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: bold;
-      font-size: 1.2em;
+      margin: auto;
       border-radius: 10px;
-      border: 2px solid #444;
-      transition: background-color 0.3s;
     }
 
-    .available {
-      background-color: #a8e6a2;
+    .chair {
+      width: 20px;
+      height: 20px;
+      background-color: #999;
+      border-radius: 50%;
+      position: absolute;
     }
 
-    .occupied {
-      background-color: #f8a5a5;
+    /* 椅子の配置（上・右・下・左） */
+    .chair-top { top: -15px; left: 50%; transform: translateX(-50%); }
+    .chair-right { right: -15px; top: 50%; transform: translateY(-50%); }
+    .chair-bottom { bottom: -15px; left: 50%; transform: translateX(-50%); }
+    .chair-left { left: -15px; top: 50%; transform: translateY(-50%); }
+
+    /* 利用中なら赤にする */
+    .occupied .table {
+      background-color: red;
     }
   </style>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-      authDomain: "qr-visitor-log.firebaseapp.com",
-      projectId: "qr-visitor-log",
-      storageBucket: "qr-visitor-log.appspot.com",
-      messagingSenderId: "304250341939",
-      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    const tableStatus = {};
-    const totalTables = 7;
-
-    function updateTableDisplay() {
-      for (let i = 1; i <= totalTables; i++) {
-        const elem = document.getElementById(`table-${i}`);
-        if (!elem) continue;
-
-        const count = tableStatus[i] || 0;
-        if (count > 0) {
-          elem.classList.remove("available");
-          elem.classList.add("occupied");
-          elem.textContent = `✕ ${i}番台`;
-        } else {
-          elem.classList.remove("occupied");
-          elem.classList.add("available");
-          elem.textContent = `◯ ${i}番台`;
-        }
-      }
-    }
-
-    function countVisitors(snapshot) {
-      const enterLog = {};
-      const exitLog = {};
-
-      for (let i = 1; i <= totalTables; i++) {
-        enterLog[i] = 0;
-        exitLog[i] = 0;
-      }
-
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const table = data.table;
-        const type = data.type;
-
-        if (!table || !type) return;
-
-        if (type === "enter") enterLog[table]++;
-        if (type === "exit") exitLog[table]++;
-      });
-
-      for (let i = 1; i <= totalTables; i++) {
-        tableStatus[i] = (enterLog[i] || 0) - (exitLog[i] || 0);
-      }
-
-      updateTableDisplay();
-    }
-
-    window.onload = () => {
-      db.collection("logs").onSnapshot(countVisitors);
-    };
-  </script>
 </head>
-
 <body>
-  <header>
-    <div class="header-bar">
-      <div class="header-title">店内管理システム</div>
-      <div class="header-links">
-        <a href="#">マニュアル</a>
-        <a href="#">ログアウト</a>
-      </div>
+  <div class="table-area">
+    <div class="table-container occupied">
+      <div class="chair chair-top"></div>
+      <div class="chair chair-right"></div>
+      <div class="chair chair-bottom"></div>
+      <div class="chair chair-left"></div>
+      <div class="table">1</div>
     </div>
-    <nav>
-      <a href="index.html">ホーム</a>
-      <a href="map.html" class="active">店内マップ</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
-    </nav>
-  </header>
-
-  <main>
-    <div class="map-grid">
-      <div id="table-1" class="table">読み込み中...</div>
-      <div id="table-2" class="table">読み込み中...</div>
-      <div id="table-3" class="table">読み込み中...</div>
-      <div id="table-4" class="table">読み込み中...</div>
-      <div id="table-5" class="table">読み込み中...</div>
-      <div id="table-6" class="table">読み込み中...</div>
-      <div id="table-7" class="table">読み込み中...</div>
-    </div>
-  </main>
+    <!-- 同様に他のテーブルもここに追加していきます -->
+  </div>
 </body>
 </html>
-
